# Launchy

./: AGENTS.md  README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: discord_rpc.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/launcher/: ea_launcher.rs  epic_launcher.rs  gog_launcher.rs  itch_launcher.rs  manual_launcher.rs  mod.rs  steam_launcher.rs  uplay_launcher.rs
src-tauri/src/models/: game.rs  mod.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/process_monitor/: mod.rs
src-tauri/src/scanners/: artwork.rs  ea.rs  epic.rs  gog.rs  heroic.rs  itch.rs  manual.rs  metadata.rs  mod.rs  steam.rs  uplay.rs
src-tauri/src/utils/: backup.rs  mod.rs  steam_shortcuts.rs
src/components/: AddGameModal.tsx  GameCard.tsx  GameGrid.tsx  ListGameRow.tsx  MediumGameCard.tsx  SearchBar.tsx  Sidebar.tsx  SourceBadge.tsx  StatusButton.tsx
src/pages/: GameDetailsPage.tsx  LibraryPage.tsx  SettingsPage.tsx  StatsPage.tsx  TvPage.tsx
src/types/: game.ts
src/utils/: artwork.ts  plugins.ts
