[package]
name = "launchy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "launchy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sysinfo = "0.30"
open = "5.1"
dirs = "5.0"
walkdir = "2.4"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.14"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "0.6"
percent-encoding = "2.3"
discord-rich-presence = "0.2.4"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"



